--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "dentpro-colombia",
   "version": "1.0.0",
-  "description": "Sitio de DentPro Colombia con Tailwind CSS",
+  "private": true,
   "scripts": {
-    "build:css": "npx tailwindcss -i ./src/styles/tailwind.css -o ./css/tailwind.css --minify"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [
-    "dentpro",
-    "odontologia",
-    "tailwind"
-  ],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
+  "dependencies": {
+    "next": "14.2.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  },
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "@types/node": "20.14.9",
+    "@types/react": "18.3.3",
+    "autoprefixer": "10.4.19",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.4",
+    "postcss": "8.4.38",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.5"
   }
 }
