--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "5.45.1",
     "next": "14.2.4",
+    "next-auth": "4.24.7",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
