--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@tanstack/react-query": "5.90.5",
+    "bcryptjs": "2.4.3",
+    "better-sqlite3": "11.8.1",
     "next": "15.5.6",
     "next-auth": "4.24.11",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.6",
+    "@types/better-sqlite3": "7.6.12",
     "@types/node": "24.8.1",
     "@types/react": "19.2.2",
     "autoprefixer": "10.4.21",
