--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "5.90.5",
+    "@auth/core": "0.34.2",
     "bcryptjs": "2.4.3",
     "better-sqlite3": "11.8.1",
     "next": "^15.5.6",
