--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@types/better-sqlite3": "7.6.12",
     "@types/node": "24.8.1",
     "@types/react": "19.2.2",
-    "autoprefixer": "10.4.21",
+    "autoprefixer": "^10.4.21",
     "eslint": "9.38.0",
     "eslint-config-next": "15.5.6",
-    "postcss": "8.5.6",
-    "tailwindcss": "3.4.17",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.9.3"
   }
 }
