--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/core": "0.34.2",
     "@tanstack/react-query": "5.90.5",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "bcryptjs": "2.4.3",
     "better-sqlite3": "11.8.1",
     "next": "^15.5.6",
