--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest run"
   },
   "dependencies": {
     "@auth/core": "0.34.2",
@@ -25,11 +26,17 @@
     "@types/better-sqlite3": "7.6.12",
     "@types/node": "24.8.1",
     "@types/react": "19.2.2",
+    "@testing-library/react": "16.1.0",
+    "@testing-library/user-event": "14.5.2",
+    "@vitejs/plugin-react": "4.3.4",
     "autoprefixer": "^10.4.21",
     "eslint": "9.38.0",
     "eslint-config-next": "15.5.6",
+    "jsdom": "25.0.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "vite": "5.4.11",
+    "vitest": "2.1.8"
   }
 }
