--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth/core": "0.34.2",
+    "@phosphor-icons/react": "^2.1.10",
     "@tanstack/react-query": "5.90.5",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -22,12 +23,12 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@testing-library/react": "16.1.0",
+    "@testing-library/user-event": "14.5.2",
     "@types/bcryptjs": "2.4.6",
     "@types/better-sqlite3": "7.6.12",
     "@types/node": "24.8.1",
     "@types/react": "19.2.2",
-    "@testing-library/react": "16.1.0",
-    "@testing-library/user-event": "14.5.2",
     "@vitejs/plugin-react": "4.3.4",
     "autoprefixer": "^10.4.21",
     "eslint": "9.38.0",
