--- a/package.json
+++ b/package.json
@@ -7,26 +7,28 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest run"
+    "test": "vitest run",
+    "prisma": "prisma",
+    "db:seed": "prisma db seed"
   },
   "dependencies": {
     "@auth/core": "0.34.2",
     "@phosphor-icons/react": "^2.1.10",
+    "@prisma/client": "^6.18.0",
     "@tanstack/react-query": "5.90.5",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "bcryptjs": "2.4.3",
-    "better-sqlite3": "11.8.1",
+    "bcrypt": "^6.0.0",
+    "jose": "^6.1.0",
     "next": "^15.5.6",
     "next-auth": "^4.24.11",
+    "prisma": "^6.18.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@testing-library/react": "16.1.0",
     "@testing-library/user-event": "14.5.2",
-    "@types/bcryptjs": "2.4.6",
-    "@types/better-sqlite3": "7.6.12",
     "@types/node": "24.8.1",
     "@types/react": "19.2.2",
     "@vitejs/plugin-react": "4.3.4",
@@ -39,5 +41,8 @@
     "typescript": "5.9.3",
     "vite": "5.4.11",
     "vitest": "2.1.8"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
