--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URL="file:./dev.db"
-AUTH_JWT_SECRET="your-secret"
+AUTH_JWT_SECRET="change-me"
+# Define SEED_PASSWORD con una contraseña segura antes de ejecutar `npm run db:seed`
