--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@tanstack/react-query": "5.90.5",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^2.4.3",
     "jose": "^6.1.0",
     "next": "^15.5.6",
     "next-auth": "^4.24.11",
@@ -30,6 +30,7 @@
     "@testing-library/react": "16.1.0",
     "@testing-library/user-event": "14.5.2",
     "@types/node": "24.8.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/react": "19.2.2",
     "@vitejs/plugin-react": "4.3.4",
     "autoprefixer": "^10.4.21",
