--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
   "devDependencies": {
     "@testing-library/react": "16.1.0",
     "@testing-library/user-event": "14.5.2",
-    "@types/node": "24.8.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/node": "24.8.1",
     "@types/react": "19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "4.3.4",
     "autoprefixer": "^10.4.21",
     "eslint": "9.38.0",
