Add development admin seed user

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "test": "vitest run",
     "prisma": "prisma",
-    "db:seed": "prisma db seed"
+    "db:seed": "prisma db seed",
+    "prisma:seed": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' prisma/seed.ts"
   },
   "dependencies": {
     "@auth/core": "0.34.2",
