--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-DATABASE_URL="file:./dev.db"
-AUTH_JWT_SECRET="change-me"
-# Define SEED_PASSWORD con una contraseña segura antes de ejecutar `npm run db:seed`
+DATABASE_URL=""
+NEXTAUTH_SECRET=""
+NEXTAUTH_URL="https://dent-pro-colombia.vercel.app/"
+AUTH_TRUST_HOST=true
+SEED_ADMIN_EMAIL="admin@dentpro.co"
+SEED_ADMIN_PASSWORD=""
