--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 DATABASE_URL=""
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL="https://dent-pro-colombia.vercel.app/"
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
 AUTH_TRUST_HOST=true
-SEED_ADMIN_EMAIL="admin@dentpro.co"
+RESEND_API_KEY=""
+EMAIL_FROM="no-reply@dentpro.co"
+SEED_ADMIN_EMAIL="kevinrodr@hotmail.com"
 SEED_ADMIN_PASSWORD=""
