--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 DATABASE_URL=""
+OPS_ENABLED="false"
+OPS_KEY=""
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL="https://dent-pro-colombia.vercel.app/"
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
