--- a/package.json
+++ b/package.json
@@ -18,35 +18,35 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
-    "@auth/core": "0.34.2",
+    "@auth/core": "0.34.3",
     "@phosphor-icons/react": "^2.1.10",
     "@prisma/client": "^5.22.0",
-    "@tanstack/react-query": "5.90.5",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
-    "bcryptjs": "^2.4.3",
-    "jose": "^6.1.0",
+    "@tanstack/react-query": "5.90.16",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
+    "bcryptjs": "^3.0.3",
+    "jose": "^6.1.3",
     "next": "15.5.9",
-    "next-auth": "^4.24.11",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "next-auth": "^4.24.13",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
-    "@testing-library/react": "16.1.0",
-    "@testing-library/user-event": "14.5.2",
+    "@testing-library/react": "16.3.1",
+    "@testing-library/user-event": "14.6.1",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "24.8.1",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@vitejs/plugin-react": "4.3.4",
-    "autoprefixer": "^10.4.21",
-    "baseline-browser-mapping": "^2.9.11",
-    "eslint": "9.38.0",
-    "eslint-config-next": "15.5.6",
-    "jsdom": "25.0.1",
+    "@types/node": "25.0.8",
+    "@types/react": "19.2.8",
+    "@types/react-dom": "19.2.3",
+    "@vitejs/plugin-react": "5.1.2",
+    "autoprefixer": "^10.4.23",
+    "baseline-browser-mapping": "^2.9.14",
+    "eslint": "9.39.2",
+    "eslint-config-next": "15.5.9",
+    "jsdom": "27.4.0",
     "postcss": "^8.5.6",
     "prisma": "^5.22.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.4.19",
     "ts-node": "^10.9.2",
     "typescript": "5.9.3",
     "vite": "5.4.11",
