--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest run",
-    "e2e": "playwright test",
+    "e2e": "npm run test:e2e",
     "prisma": "prisma",
     "db:seed": "prisma db seed",
     "prisma:seed": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' prisma/seed.ts",
     "postinstall": "prisma generate",
     "typecheck": "tsc --noEmit",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright install --with-deps chromium && playwright test"
   },
   "dependencies": {
     "@auth/core": "0.34.3",
@@ -49,8 +49,8 @@
     "tailwindcss": "^3.4.19",
     "ts-node": "^10.9.2",
     "typescript": "5.9.3",
-    "vite": "5.4.11",
-    "vitest": "2.1.8",
+    "vite": "7.3.1",
+    "vitest": "4.0.17",
     "@playwright/test": "^1.49.0"
   },
   "prisma": {
