--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ out/
 prisma/.cache/
 tests/prisma-client/
 tests/.tmp/
+playwright-report/
+test-results/
+e2e-results/
+traces/
+screenshots/
+videos/
