--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "node scripts/run-ci-command.mjs \"prisma generate && next build\"",
     "vercel-build": "node scripts/vercel-prisma.mjs && next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest run",
+    "test": "node scripts/run-ci-command.mjs \"vitest run\"",
     "e2e": "npm run test:e2e",
     "prisma": "prisma",
     "db:seed": "prisma db seed",
     "prisma:seed": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' prisma/seed.ts",
     "postinstall": "prisma generate",
     "typecheck": "tsc --noEmit",
-    "test:e2e": "playwright install --with-deps chromium && playwright test"
+    "test:e2e": "node scripts/run-e2e.mjs"
   },
   "dependencies": {
     "@auth/core": "0.34.3",
