--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "next": "15.5.9",
     "next-auth": "^4.24.13",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "rrule": "^2.8.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.49.0",
     "@testing-library/react": "16.3.1",
     "@testing-library/user-event": "14.6.1",
     "@types/bcryptjs": "^2.4.6",
@@ -50,8 +52,7 @@
     "ts-node": "^10.9.2",
     "typescript": "5.9.3",
     "vite": "7.3.1",
-    "vitest": "4.0.17",
-    "@playwright/test": "^1.49.0"
+    "vitest": "4.0.17"
   },
   "prisma": {
     "seed": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' prisma/seed.ts"
