Harden APIs with rate limits, validation, and pagination

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,35 @@
 DATABASE_URL=""
+DATABASE_URL_UNPOOLED=""
 SHADOW_DATABASE_URL=""
-OPS_ENABLED="false"
-OPS_KEY=""
+
+NEXTAUTH_URL=""
 NEXTAUTH_SECRET=""
-NEXTAUTH_URL="https://dent-pro-colombia.vercel.app/"
-NEXT_PUBLIC_APP_URL="http://localhost:3000"
-AUTH_TRUST_HOST=true
+AUTH_JWT_SECRET=""
+AUTH_SECRET=""
+AUTH_TRUST_HOST=""
+NEXT_PUBLIC_APP_URL=""
+
 RESEND_API_KEY=""
-EMAIL_FROM="no-reply@dentpro.co"
-SEED_ADMIN_EMAIL="kevinrodr@hotmail.com"
+EMAIL_FROM=""
+
+OPS_ENABLED=""
+OPS_KEY=""
+
+SEED_ADMIN_EMAIL=""
 SEED_ADMIN_PASSWORD=""
+
+ANALYTICS_TIME_ZONE=""
+CLINIC_NAME=""
+CLINIC_CITY=""
+CLINIC_ADDRESS=""
+
+TEST_AUTH_BYPASS=""
+TEST_AUTH_EMAIL=""
+TEST_AUTH_PASSWORD=""
+TEST_AUTH_ROLE=""
+
+UPSTASH_REDIS_REST_URL=""
+UPSTASH_REDIS_REST_TOKEN=""
+
+RUN_E2E=""
+PLAYWRIGHT_BROWSERS_PATH=""
