--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@phosphor-icons/react": "^2.1.10",
     "@prisma/client": "^5.22.0",
     "@tanstack/react-query": "5.90.16",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.1",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "bcryptjs": "^3.0.3",
@@ -30,7 +32,8 @@
     "next-auth": "^4.24.13",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "rrule": "^2.8.1"
+    "rrule": "^2.8.1",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
