chore: swap app icon to svg

--- a/.env.example
+++ b/.env.example
@@ -31,5 +31,12 @@ TEST_AUTH_ROLE=""
 UPSTASH_REDIS_REST_URL=""
 UPSTASH_REDIS_REST_TOKEN=""
 
+SENTRY_DSN=""
+NEXT_PUBLIC_SENTRY_DSN=""
+SENTRY_ENVIRONMENT=""
+NEXT_PUBLIC_SENTRY_ENVIRONMENT=""
+SENTRY_TRACES_SAMPLE_RATE="0.1"
+LOG_LEVEL="info"
+
 RUN_E2E=""
 PLAYWRIGHT_BROWSERS_PATH=""
