--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "node scripts/run-ci-command.mjs \"prisma generate && next build\"",
     "vercel-build": "node scripts/vercel-prisma.mjs && next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "test": "node scripts/run-ci-command.mjs \"vitest run\"",
     "e2e": "npm run test:e2e",
     "prisma": "prisma",
@@ -20,16 +20,18 @@
   "dependencies": {
     "@auth/core": "0.34.3",
     "@phosphor-icons/react": "^2.1.10",
-    "@prisma/client": "^5.22.0",
-    "@tanstack/react-query": "5.90.16",
+    "@prisma/client": "^7.2.0",
+    "@sentry/nextjs": "^10.34.0",
+    "@tanstack/react-query": "^5.90.17",
     "@upstash/ratelimit": "^2.0.8",
     "@upstash/redis": "^1.36.1",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "bcryptjs": "^3.0.3",
     "jose": "^6.1.3",
-    "next": "15.5.9",
+    "next": "^16.1.2",
     "next-auth": "^4.24.13",
+    "pino": "^10.2.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "rrule": "^2.8.1",
@@ -37,21 +39,23 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/react": "16.3.1",
     "@testing-library/user-event": "14.6.1",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "25.0.8",
+    "@types/node": "^25.0.9",
     "@types/react": "19.2.8",
     "@types/react-dom": "19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.53.0",
+    "@typescript-eslint/parser": "^8.53.0",
     "@vitejs/plugin-react": "5.1.2",
-    "autoprefixer": "^10.4.23",
     "baseline-browser-mapping": "^2.9.14",
-    "eslint": "9.39.2",
-    "eslint-config-next": "15.5.9",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.2",
     "jsdom": "27.4.0",
     "postcss": "^8.5.6",
-    "prisma": "^5.22.0",
-    "tailwindcss": "^3.4.19",
+    "prisma": "^7.2.0",
+    "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
     "typescript": "5.9.3",
     "vite": "7.3.1",
