--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@auth/core": "0.34.3",
     "@phosphor-icons/react": "^2.1.10",
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@sentry/nextjs": "^10.34.0",
     "@tanstack/react-query": "^5.90.17",
@@ -31,6 +32,7 @@
     "jose": "^6.1.3",
     "next": "^16.1.2",
     "next-auth": "^4.24.13",
+    "pg": "^8.17.1",
     "pino": "^10.2.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
