--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "@typescript-eslint/eslint-plugin": "^8.53.0",
     "@typescript-eslint/parser": "^8.53.0",
     "@vitejs/plugin-react": "5.1.2",
+    "@prisma/adapter-better-sqlite3": "^7.2.0",
     "baseline-browser-mapping": "^2.9.14",
+    "better-sqlite3": "^11.6.0",
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.2",
     "jsdom": "27.4.0",
