--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@upstash/ratelimit": "^2.0.8",
     "@upstash/redis": "^1.36.1",
     "@vercel/analytics": "^1.6.1",
+    "@vercel/blob": "^2.0.0",
     "@vercel/speed-insights": "^1.3.1",
     "bcryptjs": "^3.0.3",
     "jose": "^6.1.3",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
+    "@prisma/adapter-better-sqlite3": "^7.2.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/react": "16.3.1",
     "@testing-library/user-event": "14.6.1",
@@ -51,7 +53,6 @@
     "@typescript-eslint/eslint-plugin": "^8.53.0",
     "@typescript-eslint/parser": "^8.53.0",
     "@vitejs/plugin-react": "5.1.2",
-    "@prisma/adapter-better-sqlite3": "^7.2.0",
     "baseline-browser-mapping": "^2.9.14",
     "better-sqlite3": "^11.6.0",
     "eslint": "^9.39.2",
