--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jose": "^6.1.3",
     "next": "^16.1.2",
     "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.12",
     "pg": "^8.17.1",
     "pino": "^10.2.0",
     "react": "^19.2.3",
@@ -48,6 +49,7 @@
     "@testing-library/user-event": "14.6.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^25.0.9",
+    "@types/nodemailer": "^7.0.5",
     "@types/react": "19.2.8",
     "@types/react-dom": "19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.53.0",
