--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ jobs:
   build-test:
     runs-on: ubuntu-latest
     env:
+      NODE_VERSION: "20"
       DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/dentpro"
       NEXTAUTH_SECRET: "test-secret"
       AUTH_TRUST_HOST: "true"
@@ -21,19 +22,19 @@ jobs:
       - name: Use Node.js 20
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
 
       - name: Install dependencies
         run: npm ci
 
       - name: Restore Next.js cache
-        uses: actions/cache@v4
+        uses: actions/cache/restore@v4
         with:
           path: .next/cache
-          key: ${{ runner.os }}-next-cache-${{ hashFiles('package-lock.json', 'next.config.ts', 'tsconfig.json') }}
+          key: next-cache-${{ runner.os }}-${{ hashFiles('package-lock.json') }}-${{ env.NODE_VERSION }}
           restore-keys: |
-            ${{ runner.os }}-next-cache-
+            next-cache-${{ runner.os }}-
 
       - name: Lint
         run: npm run lint
@@ -41,5 +42,14 @@ jobs:
       - name: Test
         run: npm run test
 
+      - name: Generate Prisma client
+        run: npx prisma generate
+
       - name: Build
         run: npm run build
+
+      - name: Save Next.js cache
+        uses: actions/cache/save@v4
+        with:
+          path: .next/cache
+          key: next-cache-${{ runner.os }}-${{ hashFiles('package-lock.json') }}-${{ env.NODE_VERSION }}
