Refactor backend attachments and scheduling

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ NEXT_PUBLIC_APP_URL=""
 RESEND_API_KEY=""
 EMAIL_FROM=""
 
-OPS_KEY=""
+CRON_SECRET=""
 
 SEED_ADMIN_EMAIL=""
 SEED_ADMIN_PASSWORD=""
