Update infra docs and attachment migration

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,13 @@ NEXT_PUBLIC_APP_URL=""
 
 RESEND_API_KEY=""
 EMAIL_FROM=""
+# SMTP config for appointment emails.
+SMTP_HOST=""
+SMTP_PORT=""
+SMTP_USER=""
+SMTP_PASS=""
 
+# Secret for appointment reminder cron authorization.
 CRON_SECRET=""
 
 SEED_ADMIN_EMAIL=""
@@ -29,12 +35,15 @@ TEST_AUTH_ROLE=""
 
 UPSTASH_REDIS_REST_URL=""
 UPSTASH_REDIS_REST_TOKEN=""
+# Token for Vercel Blob storage (attachments).
+BLOB_READ_WRITE_TOKEN=""
 
 SENTRY_DSN=""
 NEXT_PUBLIC_SENTRY_DSN=""
 SENTRY_ENVIRONMENT=""
 NEXT_PUBLIC_SENTRY_ENVIRONMENT=""
 SENTRY_TRACES_SAMPLE_RATE="0.1"
+# Controls application log verbosity in production (recommend info or warn).
 LOG_LEVEL="info"
 
 RUN_E2E=""
