--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbo",
     "build": "node scripts/run-ci-command.mjs \"prisma generate && next build\"",
-    "vercel-build": "node scripts/vercel-prisma.mjs && next build",
+    "vercel-build": "npx prisma generate --schema prisma/schema.prisma && node scripts/vercel-prisma.mjs && next build",
     "start": "next start",
     "lint": "eslint .",
     "test": "node scripts/run-ci-command.mjs \"vitest run\"",
@@ -13,7 +13,7 @@
     "prisma": "prisma",
     "db:seed": "prisma db seed",
     "prisma:seed": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' prisma/seed.ts",
-    "postinstall": "prisma generate",
+    "postinstall": "node scripts/prisma-generate-safe.mjs",
     "typecheck": "tsc --noEmit",
     "test:e2e": "node scripts/run-e2e.mjs"
   },
