--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": ">=22"
+    "node": "24.x"
   },
   "scripts": {
     "dev": "next dev --turbo",
@@ -18,7 +18,8 @@
     "prisma:seed": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' prisma/seed.ts",
     "postinstall": "node scripts/prisma-generate-safe.mjs",
     "typecheck": "tsc --noEmit",
-    "test:e2e": "node scripts/run-e2e.mjs"
+    "test:e2e": "node scripts/run-e2e.mjs",
+    "e2e:prod": "E2E_ENV=production RUN_E2E=1 npm run test:e2e"
   },
   "dependencies": {
     "@auth/core": "0.34.3",
@@ -51,7 +52,7 @@
     "@testing-library/react": "16.3.1",
     "@testing-library/user-event": "14.6.1",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^25.0.9",
+    "@types/node": "^24.0.0",
     "@types/nodemailer": "^7.0.5",
     "@types/react": "19.2.8",
     "@types/react-dom": "19.2.3",
