Add bypass login e2e coverage

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ DATABASE_URL_UNPOOLED=""
 SHADOW_DATABASE_URL=""
 
 NEXTAUTH_URL=""
+# On Vercel, NEXTAUTH_URL can be omitted if VERCEL_URL is set.
 NEXTAUTH_SECRET=""
 AUTH_JWT_SECRET=""
 AUTH_SECRET=""
